--- a/.chloggen/downscale-binary-size.yaml
+++ b/.chloggen/downscale-binary-size.yaml
@@ -7,7 +7,7 @@ change_type: enhancement
 component: cmd/otelcontribcol, cmd/oteltestbedcol, cmd/telemetrygen
 
 # A brief description of the change.  Surround your text with quotes ("") if it needs to start with a backtick (`).
-note: downscale the binary size
+note: Using -s and -w ldflags to downscale the binary size when building.
 
 # Mandatory: One or more tracking issues related to the change. You can use the PR number here if no issue exists.
 issues: []
@@ -15,7 +15,7 @@ issues: []
 # (Optional) One or more lines of additional information to render under the primary note.
 # These lines will be padded with 2 spaces and then inserted directly into the document.
 # Use pipe (|) for multiline entries.
-subtext:
+subtext: After building with the `-s` and `-w` ldflags, the binary size scales down 28%.
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
